--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,27 @@
   text-align: center;
   font-size: 24pt;
 }
+
+.header2 {
+  font-size: 20pt;
+}
+
+.body {
+  padding-top: 10pt;
+  padding-bottom: 10pt;
+}
+
+.movie:hover {
+  text-decoration: underline;
+  cursor: pointer;
+
+}
+
+.movieDetail {
+  font-size: 14pt;
+}
+
+.back {
+  text-decoration: underline;
+  cursor: pointer;
+}
